--- a/piecework/miniprogram/app.json
+++ b/piecework/miniprogram/app.json
@@ -7,7 +7,10 @@
     "pages/qrcode/qrcode",
     "pages/contact/contact",
     "pages/details/details",
-    "pages/settings/settings"
+    "pages/settings/settings",
+    "pages/employlist/employlist",
+    "pages/completedlist/completedlist",
+    "pages/uncompletedlist/uncompletedlist"
   ],
   "window": {
     "backgroundColor": "#000000",
